private server, docs
